<resources>
    <string name="app_name">NavigationComponentLab1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="grocery_name">Welcome to Gerrity\'s!</string>
    <string name="edt_text_hint">Enter your name</string>
    <string name="welcome_text"> </string>
    <string name="add_button_text">Add Item</string>
    <string name="added_items_text"> </string>
    <string name="food1">Cookies</string>
    <string name="food2">Apples</string>
    <string name="food3">Chocolate</string>
    <string name="food4">Lettuce</string>
    <string name="food5">Pineapple</string>
    <string name="food6">Cake</string>
    <string name="food7">Chicken Wings</string>
    <string name="food8">Yogurt</string>
    <string name="start_list">Start List</string>
</resources>